# ai-simulation

./: .gitignore  .mcp.json
Assets/Materials/: Blue.mat  Green.mat  NavyFloor.mat  Orange.mat  Red.mat  White.mat
Assets/Scenes/: FruitPickerScene.unity  GripperScene.unity
Assets/Scripts/: ArticulationJointController.cs  BallSpawner.cs  ClawMachineController.cs  FruitSpawner.cs  GripperDemoController.cs  IObjectSpawner.cs  PincherController.cs  PincherFingerController.cs  RobotController.cs
Assets/Scripts/AI/: ClawMachineAgent.cs  GeminiService.cs  ScreenshotCapture.cs  (+2 more)
Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
Docs/: AGENT_EVOLUTION.md
Docs/ball_picker/: BALL_PICKER.md  DATASET.md
ProjectSettings/: ProjectSettings.asset
python/: README.md  pyproject.toml
python/dashboard/: app.py  components.py
python/dashboard/pages/: 1_run_agent.py  2_history.py  3_collect.py  4_playground.py  5_oracle_collect.py  5_scene_editor.py
python/scripts/: collect_data.py  convert_dataset.py  run_agent.py
python/src/: config.py  llm_factory.py  scene_store.py
python/src/agent/: graph.py  nodes.py  prompts.py  state.py  tools.py
python/src/claw_machine_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python/src/data/: converter.py  logger.py
python/src/oracle/: runner.py  strategy.py
python/src/scenes/: __init__.py
python/src/scenes/ball_picker/: __init__.py  commands.py  prompts.py  tools.py
python/src/scenes/fruit_picker/: __init__.py  commands.py  prompts.py  tools.py
python/src/unity/: client.py
(+20 files in other folders)
